<resources>
    <string name="app_name">Semana Santa</string>
    <string name="app_name_large">Semana Santa Bilbao</string>

    <!-- Etiquetas texto spinner de carga -->
    <string name="loading_cofradias">Cargando Cofradías</string>
    <string name="loading_detail_cofradia">Cargando datos de la Cofradía</string>
    <string name="loading_procesiones">Cargando Procesiones</string>
    <string name="loading_pasos">Cargando Pasos</string>
    <string name="loading_ruta">Cargando Indicaciones</string>
    <string name="loading_contactos">Cargando Contactos</string>
    <string name="loading_gallery_images">Cargando Imágenes de la Galería</string>
    <string name="loading_gallery_pasos">Cargando Pasos de la Galería</string>
    <string name="loading_gallery_procesion">Cargando Procesiones</string>
    <string name="loading_detail_image">Cargando Imágen</string>

    <!-- Etiquetas descripciones de imagenes -->
    <string name="image_cofradia_description">Imagen Cofradía</string>
    <string name="logo_cofradia_description">Escudo Cofradía</string>
    <string name="image_paso_description">Imagen Paso</string>
    <string name="image_indicacion">Imagen Indicación</string>
    <string name="image_gallery_description">Imagen Galería</string>
    <string name="image_pasos_description">Imagen Paso</string>
    <string name="image_detail_procesion">Imagen Procesión</string>

    <!-- Etiquetas elementos del menu de la aplicación -->
    <string name="app_navigation_view_name">Cofradías de Bilbao</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_calendario_eventos">Calendario de Eventos</string>
    <string name="menu_galeria">Galería de Imágenes</string>
    <string name="menu_pasos">Galería de Pasos</string>
    <string name="menu_procesiones">Procesiones</string>
    <string name="menu_contacto">Contactos</string>
    <string name="menu_museo">Museo de Pasos</string>
    <string name="menu_login_usuarios">Usuarios</string>
    <string name="menu_share_app">Compartir Aplicación</string>
    <string name="texto_share_app">Deja que te recomiende esta aplicación\n\n</string>
    <string name="texto_compartir_app">Compartir aplicación</string>

    <!-- Nombre pestañas detalle cofradias -->
    <string name="tab_detail_cofradia_one">Cofradía</string>
    <string name="tab_detail_cofradia_two">Detalle</string>
    <string name="tab_detail_cofradia_three">Pasos</string>
    <string name="tab_detail_cofradia_four">Galería</string>

    <!-- Nombre pestañas detalle procesiones -->
    <string name="tab_detail_procesion_one">Detalle</string>
    <string name="tab_detail_procesion_two">Pasos</string>
    <string name="tab_detail_procesion_three">Ruta</string>
    <string name="tab_detail_procesion_four">Mapa</string>

    <!-- Etiquetas detalle Cofradía -->
    <string name="detail_cofradia_vestimenta">Vestimenta:&#x200A;</string>
    <string name="detail_cofradia_fundacion">Fundación:&#x200A;</string>
    <string name="detail_cofradia_sede">Sede:&#x200A;</string>
    <string name="detail_cofradia_numero_procesiones">Número de Procesiones:&#x200A;</string>
    <string name="detail_cofradia_hermano_abad">Hermano Abad:&#x200A;</string>
    <string name="detail_cofradia_procesiones_title_view">PROCESIONES</string>
    <string name="detail_contacto_title">CONTACTO</string>
    <string name="detail_cofradia_direction">Dirección:&#x200A;</string>
    <string name="detail_cofradia_phone">Teléfono:&#x200A;</string>
    <string name="detail_cofradia_web">Web:&#x200A;</string>
    <string name="detail_cofradia_pasos_title">Pasos</string>

    <!-- Etiquetas detalle Procesion -->
    <string name="detail_procesion_nombre">Procesión:&#x200A;</string>
    <string name="detail_procesion_dia">Día:&#x200A;</string>
    <string name="detail_procesion_fecha">Fecha:&#x200A;</string>
    <string name="detail_procesion_hora">Hora de inicio:&#x200A;</string>
    <string name="detail_procesion_inicio">Lugar de inicio:&#x200A;</string>
    <string name="detail_procesion_pasos">Pasos:&#x200A;</string>

    <!-- Reference's name in intents -->
    <string name="COFRADIA">"com.alf.android.semanasantabilbao.cofradia"</string>
    <string name="COFRADIAERROR">"com.alf.android.semanasantabilbao.cofradiaerror"</string>
    <string name="PROCESION">"com.alf.android.semanasantabilbao.procesion"</string>
    <string name="PASO">"com.alf.android.semanasantabilbao.paso"</string>
    <string name="IMAGENGALERIA">"com.alf.android.semanasantabilbao.galeria"</string>
    <string name="ORIGEN">"com.alf.android.semanasantabilbao.origen"</string>
    <string name="MENU">"com.alf.android.semanasantabilbao.menu"</string>
    <string name="POSITION">position</string>
    <string name="IMAGESPATH">imagesPath</string>

    <!-- Reference's name whe no image is available -->
    <string name="NO_IMAGE">"no_image"</string>

    <!-- Detail Cofradia snackbar -->
    <string name="no_connection">"Conexión a Internet necesaria para el funcionamiento de la aplicación"</string>
    <string name="back_action">"VOLVER"</string>

    <!-- Cofradia error messages text -->
    <string name="connection_error">"Compruebe la conexión a internet del dispositivo. Generando lista local."</string>
    <string name="connection_error_detail">"Es necesaria la conexion a internet para el correcto funcionamiento de la aplicación"</string>
    <string name="firebase_error_cofradias">"Error al recuperar las Cofradias. Generando lista local."</string>
    <string name="share_app_error">"Se ha producido un error al compartir la aplicación."</string>

    <!-- Detail Procesion error messages text -->
    <string name="indicaciones_error">"Error al recuperar la lista de indicaciones."</string>

    <!-- Gallery Images error mmessages text -->
    <string name="firebase_error_gallery_images">"Error al recuperar las imágenes de la galería."</string>

    <!-- Gallery Pasos error mmessages text -->
    <string name="firebase_error_gallery_pasos">"Error al recuperar las imágenes de Pasos de la galería."</string>

    <!-- Gallery Procesiones error mmessages text -->
    <string name="firebase_error_gallery_procesiones">"Error al recuperar las imágenes de Procesiones de la galería."</string>
    <string name="firebase_error_gallery_procesiones_cofradia">"Error al recuperar las Cofradia de la Procesión seleccionada."</string>

    <!-- Contactos error mmessages text -->
    <string name="firebase_error_contactos">"Error al recuperar los contactos de las Cofradías."</string>

    <!-- Detail Iamge error mmessages text -->
    <string name="firebase_error_detail_image">"Error al recuperar la imagen."</string>

    <!-- Museo de Pasos -->
    <string name="url_museo_pasos">"http://www.museodepasosbilbao.com"</string>
    <string name="loading_museo_pasos_text">"Cargando la página..."</string>

</resources>
