<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_calendario_eventos"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/menu_calendario_eventos" />

        <item
            android:id="@+id/nav_galeria"
            android:icon="@drawable/ic_menu_galeria"
            android:title="@string/menu_galeria" />

        <item
            android:id="@+id/nav_pasos"
            android:icon="@drawable/ic_menu_pasos"
            android:title="@string/menu_pasos" />

        <item
            android:id="@+id/nav_procesiones"
            android:icon="@drawable/ic_menu_procesiones"
            android:title="@string/menu_procesiones" />

        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_menu_contacto"
            android:title="@string/menu_contacto" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_museo_pasos"
            android:icon="@drawable/ic_menu_web"
            android:title="@string/menu_museo" />

        <item
            android:id="@+id/nav_login_usuario"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_login_usuarios" />

        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share_app" />
    </group>

</menu>
