<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:paddingTop="5dp"
            android:id="@+id/procesion_imagen"
            android:contentDescription="@string/image_detail_procesion" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextLabel"
                android:text="@string/detail_procesion_nombre" />

            <TextView
                android:id="@+id/procesion_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"
                android:text="Medium Text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextLabel"
                android:text="@string/detail_procesion_dia" />

            <TextView
                android:id="@+id/procesion_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"
                android:text="Medium Text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextLabel"
                android:text="@string/detail_procesion_fecha" />

            <TextView
                android:id="@+id/procesion_fecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"
                android:text="Medium Text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextLabel"
                android:text="@string/detail_procesion_hora" />

            <TextView
                android:id="@+id/procesion_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"
                android:text="Medium Text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextLabel"
                android:text="@string/detail_procesion_inicio" />

            <TextView
                android:id="@+id/procesion_lugar_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"
                android:text="Medium Text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lastLayout"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextLabel"
                android:text="@string/detail_procesion_pasos" />

            <TextView
                android:id="@+id/procesion_pasos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"
                android:text="Medium Text" />
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>