<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/first_layout"
            android:padding="3dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text"
                android:text="Large Text"
                android:id="@+id/cofradia_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cofradia_pasos"
                style="@style/TextLabel" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Text"
                android:id="@+id/paso_intro_text" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/second_layout"
            android:layout_below="@+id/first_layout"
            android:padding="3dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contacto_title"
                android:text="@string/detail_contacto_title"
                style="@style/TitleBlack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_address"
                android:layout_below="@+id/contacto_title" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_cofradia_address"
                    style="@style/TextLabel"
                    android:text="@string/detail_cofradia_direction" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text"
                    android:id="@+id/cofradia_address" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_phone"
                android:layout_below="@+id/layout_address">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_cofradia_phone"
                    style="@style/TextLabel"
                    android:text="@string/detail_cofradia_phone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text"
                    android:id="@+id/cofradia_phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/layout_web"
                android:layout_below="@+id/layout_phone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/label_cofradia_web"
                    style="@style/TextLabel"
                    android:text="@string/detail_cofradia_web" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Text"
                    android:id="@+id/cofradia_web" />
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
